Fix borders when a separator is the next row. Use border radius on collapsed FoC only for groups of posts.

--- a/scss/partials/_paginated_stream.scss
+++ b/scss/partials/_paginated_stream.scss
@@ -61,7 +61,6 @@ div.paginated-stream {
           font-size: 14px;
           line-height: 18px;
           color: var(--light-color);
-          border-bottom: 1px solid var(--foc-divider-line-color);
 
           &.expanded-list {
             padding: 8px 0 16px;
