--- a/scss/partials/_stream_collapsed_item.scss
+++ b/scss/partials/_stream_collapsed_item.scss
@@ -5,11 +5,32 @@
 // --foc-divider-line-color: rgba($deep_navy, 0.15);
 $foc_hover_extra_padding: 4;
 
+div.virtualized-list-separator:not(.expanded-list) {
+  & + div.virtualized-list-row.collapsed-item div.stream-collapsed-item {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+  }
+}
+
 div.virtualized-list-row.collapsed-item {
   background-color: var(--background-color);
 
   @include big_web() {
     z-index: 1;
+
+    &.open-item div.stream-collapsed-item {
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+    }
+
+    &.close-item div.stream-collapsed-item {
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+    }
+
+    &:not(.close-item) div.stream-collapsed-item {
+      border-bottom: 0;
+    }
 
     &:hover {
       z-index: 2;
@@ -78,7 +99,6 @@ div.stream-collapsed-item {
   border: 1px solid var(--foc-divider-line-color);
   background-color: var(--foc-background-color);
   overflow: visible;
-
   height: #{$collapsed_foc_height}px;
   padding: 12px 12px 12px 20px;
   display: block;
